--- a/about.Rmd
+++ b/about.Rmd
@@ -1,9 +1,7 @@
 ---
 title: "About me"
-site: distill::distill_website
+site: distill::distill_article
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
-```
-
+I was born and rised in **Bogotá-Colombian** which is a city with ~10 million of
+inhabitants placed at 2640 masl. I studied Microbiology in the <a href="https://www.javeriana.edu.co/inicio" target="_blank">Pontificia Universidad Javeriana</a>
