--- a/index.Rmd
+++ b/index.Rmd
@@ -2,28 +2,29 @@
 title: "Johan S. Sáenz"
 image: "images/me.jpg"
 links:
-  - label: LinkedIn
-    url: "https://linkedin.com/"
-  - label: Twitter
-    url: "https://twitter.com/"
-  - label: GitHub
-    url: "https://github.com/"
-  - label: Email
-    url: "mailto:email@email.com"
+  - label: '<i class="fab fa-github"></i> Github'
+    url: 'https://github.com/SebasSaenz target="_blank"'
+  - label: '<i class="fab fa-researchgate"></i> ResearchGate'
+    url: 'https://www.researchgate.net/profile/Johan-Saenz target="_blank"'
+  - label: '<i class="fab fa-twitter"></i> Twitter'
+    url:  'https://twitter.com/SaenzJohanS target="_blank"'
+  - label: '<i class="fa fa-envelope"></i> Contact'
+    url: "mailto:johan.saenzmedina@uni-hohenheim.de"
 output:
   postcards::trestles
 site: distill::distill_website
 ---
- 
+
+<div style="text-align:left">
 ## Welcome!!
 
 
 Hi my name is **Johan Sebastián Sáenz** and I am a microbial ecologist currently
-working in the [Department of Functional Microbiology of Livestock](https://livestock-functional-microbiology.uni-hohenheim.de/en) 
-at the Hohenheim University.
+working in the <a href="https://livestock-functional-microbiology.uni-hohenheim.de/en" target="_blank">Department of Functional Microbiology of Livestock</a> at the Hohenheim University.
 
-I am interested in the main drivers of microbial community structure and function,
-with special focus on the phage´s role.
+I am interested in the main drivers of microbial community structure
+and function, with special focus on the phage´s role.
+</div>
 
 
 
