--- a/index.Rmd
+++ b/index.Rmd
@@ -28,4 +28,4 @@ and function, with special focus on the phage´s role.
 
 
 
-This is my personal site please look around and contact me!!
+This is my personal site, please look around and contact me!!
