--- a/portfolio.Rmd
+++ b/portfolio.Rmd
@@ -1,10 +1,6 @@
 ---
 title: "Portfolio"
-output:
-  distill::distill_article:
-    toc: true
-    toc_depth: 2
-    toc_float: true
+site: distill::distill_article
 ---
 
 Here you can find some of the data visualization created by me, mainly using the
